# core-api

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: redeploy.yaml
app/: main.py
